# RubikRecognition

./: CMakeLists.txt
src/: main.cpp
